@@ -1,5 +1,7 @@
 0.03 Mon Jun 27 13:31:12 CEST 2011
     * add some standard rigs out-of-the-box: modern, red, green
+    * correct execution of :task (skip .perlrig file)
+
 0.02 Tue Jun 14 10:57:59 CEST 2011
     * fix for use eval mode - now it doesn't check if it's an Exporter 
     * rigup -h with Pod text as usage
